--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,11 +1,35 @@
 <resources>
-    <string name="app_name">TopacAdemy_android</string>
+    <string name="app_name">TopAcademy</string>
+    <string name="hello_world">Hello World!</string>
+    <string name="start">Начать</string>
+    <string name="calculator">Калькулятор</string>
+    <string name="list">Список</string>
+    <string name="weather">Погода</string>
+    <string name="add_item_hint">Добавить элемент</string>
+    <string name="delete_item">Удалить элемент</string>
+    <string name="weather_title">Прогноз погоды</string>
+
     <string name="my_name">Dmitry Chukhnenko</string>
-    <string name="on_create">Activity created!</string>
-    <string name="on_start">Activity started!</string>
-    <string name="on_resume">Activity resumed!</string>
-    <string name="on_pause">Activity paused!</string>
-    <string name="on_stop">Activity stopped!</string>
-    <string name="on_restart">Activity restarted!</string>
-    <string name="on_destroy">Activity destroyed!</string>
+
+    <string name="default_display_value">0</string>
+    <string name="clear">C</string>
+    <string name="divide">÷</string>
+    <string name="multiply">×</string>
+    <string name="delete">⌫</string>
+    <string name="subtract">-</string>
+    <string name="add">+</string>
+    <string name="equals">=</string>
+    <string name="dot">.</string>
+    <string name="zero">0</string>
+    <string name="one">1</string>
+    <string name="two">2</string>
+    <string name="three">3</string>
+    <string name="four">4</string>
+    <string name="five">5</string>
+    <string name="six">6</string>
+    <string name="seven">7</string>
+    <string name="eight">8</string>
+    <string name="nine">9</string>
+    <string name="placeholder">0</string>
+    <string name="image">image</string>
 </resources>
