--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,6 +11,12 @@
 
     <string name="my_name">Dmitry Chukhnenko</string>
 
+    <string name="email_hint">Email</string>
+    <string name="password_hint">Пароль</string>
+    <string name="login_button">Войти</string>
+    <string name="email_error">Некорректный email</string>
+    <string name="password_error">Пароль должен быть длиннее 6 символов</string>
+
     <string name="default_display_value">0</string>
     <string name="clear">C</string>
     <string name="divide">÷</string>
